# FirstRustSite

./: Cargo.toml  README.md
html/: index.html  login.html  register.html
html/css/: general.css
src/: main.rs
