[package]
name = "rustSite1"
version = "0.1.0"
authors = ["Niel Duysters <niel.duysters@student.kdg.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.0.2"
actix-cors = "0.3.0"
actix-session = "0.4.0"
serde = "1.0.116"
lazy_static = "1.4.0"
regex = "1.3.9"
mysql = "19.0.1"
chrono = "0.4.15"
pwhash = "0.3"
